--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <head>
 
-  <title>sci_Calculadora</title> <!-- Titulo do projeto-->
+  <title>Calculadora</title> <!-- Titulo do projeto-->
 
 
   <style> /* Definindo o css da pagina */
